# project-ai

./: .gitignore  basic.ipynb  pyproject.toml
