[project]
name = "project-ai"
version = "0.1.0"
description = "Large Language Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab==4.4.0",
    "matplotlib==3.10.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "psutil==7.0.0",
    "tensorflow==2.19.0",
    "tiktoken==0.9.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "ruff==0.11.5",
]
